infrastructure/instances/dex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
spec:
  type: ClusterIP
  selector:
    app: dex
  ports:
    - name: http
      port: 5556
      targetPort: 5556
    - name: grpc
      port: 5558
      targetPort: 5558
